# Model

./: CMakeLists.txt  Converter.cpp  LICENSE  README.md
examples/: README.md
examples/ship_detailled/: 31.shipLOD358.3GM  31.shipLOD358.mtl
examples/ship_easy/: 1.shipLOD48.3GM  1.shipLOD48.mtl
include/: 3GMParser.h  AnimationData.h  AnimationSystem.h  ByteSwap.h  ChunkHeader.h  ChunkProcessor.h  ChunkReader.h  ChunkTypes.h  Dot2Chunk.h  ErrorHandler.h  FDotChunk.h  GlobalVariables.h  HeaderDetector.h  LineProcessor.h  OBJExporter.h  PrimChunk.h  PrimitiveProcessor.h  PrimitiveTypes.h  ShapeData.h  ShapeLoaderAPI.h  SurfaceData.h  SurfaceGenerator.h  VertexProcessor.h
src/: 3GM2OBJ.cpp  stub.cpp
src/Chunks/: Dot2Chunk.cpp  FDotChunk.cpp  LineProcessor.cpp  PrimChunk.cpp
src/Core/: 3GMParser.cpp  ChunkReader.cpp  CompleteParser.cpp  HeaderDetector.cpp
src/DataStructures/: ShapeData.cpp
src/Processing/: AnimationSystem.cpp  OBJExporter.cpp  PrimitiveProcessor.cpp  PrimitiveTypes.cpp  SurfaceGenerator.cpp  VertexProcessor.cpp
src/Utils/: ByteSwap.cpp  ErrorHandler.cpp  GlobalVariables.cpp
